# Indian-Budget-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  FIXES_V2.md  README.md  check_chunks.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
data/evaluation/: sample_queries.json
src/: batch_processor.py  observability.py
src/api/: __init__.py  config.py  dependencies.py  main.py  models.py
src/api/events/: __init__.py  types.py
src/api/middleware/: __init__.py  error_handler.py  logging.py  rate_limit.py  rate_limit_store.py  request_id.py
src/api/routers/: __init__.py  evaluation.py  health.py  rag.py  retrieval.py
src/api/services/: __init__.py  evaluation.py  rag.py  retrieval.py  streaming.py
src/api/telemetry/: __init__.py  attributes.py  config.py  events.py  instrumentation.py  manager.py  metrics.py
src/chunking/: config.py  entity_extractor.py  keyword_extractor.py  main.py  metadata.py  models.py  section_chunker.py  table_chunker.py  tokenizer.py  utils.py
src/embeddings/: __init__.py  batch_processor.py  config.py  embedder.py  embedding_pipeline.py  models.py  utils.py  vector_store.py
src/evaluation/: __init__.py  cli.py  data_loader.py  experiment.py  models.py  reporting.py  runner.py
src/evaluation/generation/: __init__.py  base.py
src/evaluation/retrieval/: __init__.py  base.py  hit_rate.py  map.py  mrr.py  ndcg.py  precision.py  recall.py
src/llm/: __init__.py  base_llm.py  context_builder.py  groq_llm.py  models.py  prompts.py
src/parser/: parser_budget.py  parser_budget_pymupdf4llm.py
src/rag/: __init__.py  cli.py  pipeline.py  query_classification.py
src/reranking/: __init__.py  base.py  cli.py  cross_encoder.py  future.py  model_manager.py  models.py
src/retrieval/: __init__.py  cli.py  filters.py  models.py  retriever.py  vector_store.py
tests/: conftest.py  test_chunking.py  test_embeddings.py  test_rag_pipeline.py  test_rate_limit.py  test_retrieval_filters.py
