[project]
name = "indian-budget-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.28.0",
    "pdfplumber>=0.10.0",
    "pymupdf4llm>=0.0.4",
    "tiktoken>=0.7.0",
    "sentence-transformers>=5.6.0",
    "qdrant-client>=1.18.0",
    "python-dotenv>=1.2.2",
    "groq>=1.5.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
