[project]
name = "indian-budget-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.28.0",
    "pdfplumber>=0.10.0",
    "pymupdf4llm>=0.0.4",
    "tiktoken>=0.7.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.0.0",
    "qdrant-client>=1.18.0",
    "python-dotenv>=1.2.2",
    "groq>=1.5.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-semantic-conventions>=0.43b0",
    "opentelemetry-instrumentation-logging>=0.43b0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

# Redirect torch to the CPU-only wheel index on Linux (where the container
# builds run). The default PyPI linux wheel for torch depends on the full
# nvidia-* CUDA stack (~2.5GB) even though this app only does CPU inference
# (EMBEDDING_DEVICE=cpu / RERANKER_DEVICE=cpu). Windows/macOS wheels don't
# carry that dependency, so they're left on the default index.
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
